# Pinguin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  index.html  recreate.cpp  server  server.cpp  test.py
include/: pinguin.h
include/pinguin/: server.h
lib/: server.cpp
tests/: main.cpp
